--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "start:production": "react-app-env --env-file=config/production.env start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "cypress:ci": "cypress run --config video=false",
+    "test:ci": "react-scripts test --watchAll=false && start-server-and-test start http://localhost:3000 cypress:ci"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +44,7 @@
   },
   "devDependencies": {
     "cypress": "^4.7.0",
-    "react-app-env": "^1.2.3"
+    "react-app-env": "^1.2.3",
+    "start-server-and-test": "^1.11.0"
   }
 }
